--- a/language/en-GB/en-GB.mod_share_link_fb.ini
+++ b/language/en-GB/en-GB.mod_share_link_fb.ini
@@ -8,7 +8,7 @@ MOD_SHARELINKFB="Share a link to this page in Facebook."
 MOD_SHARELINKFB_DESCRIPTION="<p style='color: #66a;'>This module puts tags for facebook open graph and additional code in header of website page.<br/><br/>Email:<a style='color:#c66;text-decoration:none;' href= 'mailto:reply@waasdorpsoekhan.nl' > reply@waasdorpsoekhan.nl</a><br/></p>"
 
 COM_MODULES_SCRIPTS_FIELDSET_LABEL="Scripts ed. &lt; head &gt; section "
-COM_MODULES_SLFB_OGP_FIELDSET_LABEL="Facebook graph images"
+COM_MODULES_SLFB_OGP_FIELDSET_LABEL="Open graph images"
 SLFB_TITLE_LABEL="Title"
 SLFB_TITLE_DESCRIPTION="Object, linked page, title"
 SLFB_SITENAME_LABEL="Sitename"
