--- a/language/nl-NL/nl-NL.mod_share_link_fb.ini
+++ b/language/nl-NL/nl-NL.mod_share_link_fb.ini
@@ -8,7 +8,7 @@ MOD_SHARELINKFB_DESCRIPTION="<p style='color: #66a;'>Deze module zet tags voor f
 
  
 COM_MODULES_SCRIPTS_FIELDSET_LABEL="Scripts ed. &lt; head &gt; section "
-COM_MODULES_SLFB_OGP_FIELDSET_LABEL="Facebook graph images"
+COM_MODULES_SLFB_OGP_FIELDSET_LABEL="Open graph images"
 SLFB_TITLE_LABEL="Titel"
 SLFB_TITLE_DESCRIPTION="Object, gelinkte pagina, titel"
 SLFB_SITENAME_LABEL="Sitenaam"
